PyMaker/datas/object2/RawHTML/i9501/Python_DOC_referPages.run-python-file-digital-ocean.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>I installed python on a machine in digital ocean and cloned a repository with a file that was running on my local machine. But when I went to run the terminal by digital ocean he gave that error.</p>
<pre><code>  File "teste.py", line 37
    print 'Total de marcas encontradas: '+str(len(all_brands)) 
                                        ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The following statement is only valid in Python 2:</p>
<pre><code>print 'Total de marcas encontradas: '+str(len(all_brands))
</code></pre>
<p>With Python 3, <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow noreferrer"><code>print</code></a> is a function, you need to add parenthesis:</p>
<pre><code>print('Total de marcas encontradas: ' + str(len(all_brands)))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You apparently switched to Python3.</p>
<pre><code>$ python2
&gt;&gt;&gt; print 'Hello' + str (len ('there'))
Hello5

$ python3
&gt;&gt;&gt; print 'Hello' + str (len ('there'))
  File "&lt;stdin&gt;", line 1
    print 'Hello' + str (len ('there'))
                ^
SyntaxError: invalid syntax
</code></pre>
</div>
